--- a/gestion_de_farmacias/plantillas/lista_de_usuarios.html
+++ b/gestion_de_farmacias/plantillas/lista_de_usuarios.html
@@ -6,9 +6,13 @@
 
 <!--Nav bar-->
 {% include "nav.html" %}
-
 <div class="m-3">
-    <h1>Lista de Usuarios</h1>
+{% if user.rol == 'medico' %} 
+<h1>Mis Pacientes</h1>
+{%else%} 
+
+<h1>Lista de Usuarios</h1>
+{%endif%}
 
     <!-- ==============================-->
     <!-- Tabla con los Usuarios activos -->
@@ -51,7 +55,10 @@
 
         </table>
     </div>
-
+    {% else %}
+    <div class="alert alert-danger" role="alert">
+        No hay usuarios registrados
+        </div>
     {% endif %}
     <br>
     <!-- Menú de paginación -->
