--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -20,6 +20,7 @@
             <thead class="thead-darkk">
                 <tr>
                     <th>Emitida el</th>
+                    <th>Tipo</th>
                     <th>Estado</th>
                     <th>Principio activo</th>
                     <th>Paciente</th>
@@ -40,6 +41,13 @@
                     <tr>
                     {% endif %}
                     <td>{{ receta.created_at }}</td>
+                    <td>
+                    {% if receta.cronico %}
+                        <span class="badge badge-pill badge-danger">Cronico</span>
+                    {% else %}
+                        <span class="badge badge-pill badge-success">No cronico</span>
+                    {% endif %}
+                    </td>
                     <td>{{ receta.estado }}</td>
                     <td>{{ receta.principio_activo }}</td>
                     <td>{{ receta.paciente }}</td>
