implemente la vista de stock disponible

--- a/gestion_de_farmacias/plantillas/recetas_usuario.html
+++ b/gestion_de_farmacias/plantillas/recetas_usuario.html
@@ -9,8 +9,41 @@
 
 <div class="m-3">
 
+    <h2>Informacion de {{object.nombre}}  {{object.apellido}}  {{object.usuario}}</h2>
+
+    <div class="container">
+        <table class="table table-hover text">
+            <tr>
+                <td>Nombre:</td>
+                <td>{{object.nombre}}</td>
+            </tr>
+            <tr>
+                <td>Apellido:</td>
+                <td>{{object.apellido}}</td>
+            </tr>
+            <tr>
+                <td>Usuario:</td>
+                <td>{{object.usuario}}</td>
+            </tr>
+            <tr>
+                <td>Fecha de nacimiento:</td>
+                <td>{{object.fecha_de_nacimiento}}</td>
+            </tr>
+            <tr>
+                <td>Telefono:</td>
+                <td>{{object.telefono}}</td>
+            </tr>
+            <tr>
+                <td>Email:</td>
+                <td>{{object.email}}</td>
+            </tr>
+        </table>
+    </div>
+
+    <hr>
+
     {% if Recetas %}
-    <h1>Receta de {{object.usuario}} </h1>
+    <h2>Recetas de {{object.nombre}}  {{object.apellido}}  {{object.usuario}} </h2>
     <div class="table-responsive">
         <table id="tabla_de_recetas" class="table table-hover">
 
@@ -42,12 +75,10 @@
                         <td>{{ receta.id }}</td>
                         <td>{{ receta.estado }}</td>
                         <td>
-                    {% if receta.cronico %}
-                        <span class="badge badge-pill badge-danger">Cronico</span>
-                    {% else %}
-                        <span class="badge badge-pill badge-success">No cronico</span>
-                    {% endif %}
-                    </td>
+                            {% if receta.cronico %}
+                            <span class="badge badge-pill badge-danger">Cronico</span> {% else %}
+                            <span class="badge badge-pill badge-success">No cronico</span> {% endif %}
+                        </td>
                         <td>{{ receta.principio_activo }}</td>
                         <td>{{ receta.paciente }}</td>
                         <td>{{ receta.medico }}</td>
