--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -20,8 +20,8 @@
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
                     <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
-                    <li>Ver trazabilidad de <a class="text-primary" href="{% url 'mis_recetas' %}">recetas propias.</a></li>
-                    <li>Historial de medicacion</li>
+                    <li>Ver un listado de las <a class="text-primary" href="{% url 'mis_recetas' %}">recetas</a> propias.</li>
+                    <li><a class="text-primary" href="{% url 'mi_usuario' %}">Editar</a> sus datos personales o cambiar la contraseña. </li>
                 </ul>
             </ul>
         </div>
@@ -33,10 +33,11 @@
                 <p>Usuario del sistema, cuyo rol principal se centra en entregar medicamentos mediante el ingreso al perfil del usuario.</p>
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
+                    <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
+                    <li>Desde el sistema se podrá administrar el <a class="text-primary" href="{% url 'mi_stock' %}">stock</a> de la farmacia a la que el usuario pertenece.</li>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'lista_de_usuarios' %}">usuarios.</a></li>
-                    <li>Desde el sistema se podrá administrar el stock de medicamentos a nivel nacional y en las unidades de farmacia a nivel local.</li>
-                    <li>Ver trazabilidad de recetas.</li>
-                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativosn</li>
+                    <li>Ver trazabilidad de <a class="text-primary" href="{% url 'recetas' %}">recetas.</a></li>
+                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativos.</li>
                 </ul>
             </ul>
         </div>
@@ -45,12 +46,14 @@
             <h4>Médicos.</h4>
             <hr>
             <ul>
-                <p>Usuario del sistema, que hace referencia a la persona que genera recetas de medicamentos. Además, tiene acceso a módulos de registro de recetas, ver medicamentos disponibles. Cabe notar que este usuario no podrá actualizar ni ingresar
-                    los medicamentos.</p>
+                <p>Usuario del sistema, que hace referencia a la persona que genera recetas de medicamentos. Además, tiene acceso a módulos de registro de recetas, ver medicamentos disponibles.</p>
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
-                    <li>Crear recetas</li>
-                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativosn</li>
+                    <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
+                    <li><a class="text-primary" href="/recetas/#crear_receta">Crear</a> recetas.</li>
+                    <li>Acceder a un listado de <a class="text-primary" href="{% url 'mis_pacientes' %}">pacientes</a> a los cuales ha otorgado recetas.</li>
+                    <li>Listado de <a class="text-primary" href="{% url 'recetas' %}">recetas.</a></li>
+
                 </ul>
                 <ul>
         </div>
@@ -59,10 +62,12 @@
             <h4>Funcionarios de manejo de Stock.</h4>
             <hr>
             <ul>
-                <p>Actor que tiene como rol principal el ingreso, actualización y reporte de los medicamentos del sistema. Este usuario no tendrá acceso a otras funcionalidades del sistema</p>
+                <p>Actor que tiene como rol principal el ingreso, actualización y reporte de los medicamentos del sistema. Este usuario no tendrá acceso a otras funcionalidades del sistema.</p>
                 <ul>
-                    <li>Consultar informacion de stock de medicamentos.</li>
-                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativosn</li>
+                    <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
+                    <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
+                    <li>Consultar informacion de <a class="text-primary" href="{% url 'stock' %}">stock</a> nacional de medicamentos.</li>
+                    <li>Permite <a class="text-primary" href="/stock/#formulario">crear</a> ragistros de stock.</li>
                 </ul>
             </ul>
         </div>
@@ -71,10 +76,11 @@
             <h4>Auditoría.</h4>
             <hr>
             <ul>
-                <p>Actor que tiene como rol principal el ingreso, actualización y reporte de los medicamentos del sistema. Este usuario no tendrá acceso a otras funcionalidades del sistema</p>
+                <p>Actor que tiene como rol principal el ingreso, actualización y reporte de los medicamentos del sistema. Este usuario no tendrá acceso a otras funcionalidades del sistema.</p>
                 <ul>
-                    <li>Consultar informacion de <a class="text-primary" href="{% url 'stock' %}">stock nacional de medicamentos.</a></li>
-                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativosn</li>
+                    <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
+                    <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
+                    <li>Consultar informacion de <a class="text-primary" href="{% url 'stock' %}">stock</a> nacional de medicamentos.</li>
                 </ul>
             </ul>
         </div>
@@ -86,7 +92,7 @@
                 <p>Únicamente él tiene acceso total a todo el sistema, puede realizar cambios en los roles de los funcionarios, ingresar nuevas farmacias, etc.</p>
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'stock' %}">stock nacional de medicamentos.</a></li>
-                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativosn</li>
+                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativos.</li>
                 </ul>
             </ul>
         </div>
@@ -102,39 +108,21 @@
             </ul>
         </div>
 
-{% comment %}
-    
+        {% comment %}
+
         <div class="feature col mb-5">
 
             <h4>Prueba de datos que llegan desde el backend</h4>
             <hr>
             <ul>
-                {% if user.is_authenticated%} 
-                    {% if user.usuario_activo %} user.usuario_activo = {{user.usuario_activo}}<br> {% endif %} 
-                    user.is_authenticated == {{user.is_authenticated}}<br> 
-                    mi farmacia es {{mi_farmacia}}<br> 
-                    {% if user.rol == "medico"%} el user.rol == "medico"<br> {% endif %} 
-                    {% if user.rol == "farmacia" %} el user.rol == "farmacia"<br> {% endif %} 
-                    {% if user.rol == "usuario" %} el user.rol == "usuario"<br> {% endif %} 
-                    {% if user.rol == "stock" %} el user.rol == "stock"<br> {% endif %} 
-                {% endif %} 
-                user.rol: {{user.rol}}<br> 
-                user.usuario_administrador: {{user.usuario_administrador}}<br> 
-                user: {{user}}<br> user.group: {{user.group }}<br> 
-                user.is_authenticated: {{user.is_authenticated }}<br> 
-                user.rol: {{user.rol}}<br> 
-                user.usuario | length: {{user.usuario | length }}<br> 
-                user.cedula_de_identidad : {{user.cedula_de_identidad }}<br> 
-                user.nombre: {{user.nombre | upper}}<br> user.apellido: {{user.apellido }}<br> 
-                user.usuario_activo: {{user.usuario_activo}}<br>                
-                request.user.username: {{request.user.username | upper}}<br> 
-                request.user.nombre: {{request.user.nombre }}<br> 
-                request.user: {{request.user }}<br>
+                {% if user.is_authenticated%} {% if user.usuario_activo %} user.usuario_activo = {{user.usuario_activo}}<br> {% endif %} user.is_authenticated == {{user.is_authenticated}}<br> mi farmacia es {{mi_farmacia}}<br> {% if user.rol == "medico"%}
+                el user.rol == "medico"<br> {% endif %} {% if user.rol == "farmacia" %} el user.rol == "farmacia"<br> {% endif %} {% if user.rol == "usuario" %} el user.rol == "usuario"<br> {% endif %} {% if user.rol == "stock" %} el user.rol == "stock"<br>                {% endif %} {% endif %} user.rol: {{user.rol}}<br> user.usuario_administrador: {{user.usuario_administrador}}<br> user: {{user}}<br> user.group: {{user.group }}<br> user.is_authenticated: {{user.is_authenticated }}<br> user.rol: {{user.rol}}<br>                user.usuario | length: {{user.usuario | length }}<br> user.cedula_de_identidad : {{user.cedula_de_identidad }}<br> user.nombre: {{user.nombre | upper}}<br> user.apellido: {{user.apellido }}<br> user.usuario_activo: {{user.usuario_activo}}<br>                request.user.username: {{request.user.username | upper}}<br> request.user.nombre: {{request.user.nombre }}<br> request.user: {{request.user }}<br>
 
             </ul>
 
         </div>
-{% endcomment %}
+        {% endcomment %}
 
-
-        {% endblock content %}
+    </div>
+</div>
+{% endblock content %}
