--- a/gestion_de_farmacias/plantillas/lista_de_usuarios.html
+++ b/gestion_de_farmacias/plantillas/lista_de_usuarios.html
@@ -50,7 +50,8 @@
                     <td>{{ usuario.usuario }}</td>
                     <td>{{ usuario.rol }}</td>
                     <td>
-                        <a class="btn btn-outline-primary btn-block " href="/recetas_usuario/{{ usuario.cedula_de_identidad }}">Ver usuario</a></td>
+                        <a class="btn btn-sm btn-outline-primary" href="/recetas_usuario/{{ usuario.cedula_de_identidad }}">Ver usuario</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
