--- a/gestion_de_farmacias/plantillas/mi_usuario.html
+++ b/gestion_de_farmacias/plantillas/mi_usuario.html
@@ -1,69 +1,62 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 <!-- Contenido estatico de la pagina -->
 
 <!--Titulo de la pagina o pestaña-->
-{% block title %}Mi Usuario{% endblock  %}
-
-{% block content %}
+{% block title %}Mi Usuario{% endblock %} {% block content %}
 
 <!--Nav bar-->
 {% include "nav.html" %}
 
-        <div class="m-3">
+<div class="m-3">
 
-		{% if 'editado_correctamente' in request.GET  and not form.errors %}
-			<div class="container">
-				<div class="alert alert-success">
-					<strong>Exito!</strong> Usuario editado correctamente.
-				</div>
-			</div>
-		{% endif %}
-	
-
-		<div class="form-group form-group col-md-12">
-			<div class="card-header">
-				<h3>Actulizar mi Usuario</h3>
-			</div>
-
-			
-
-			<form method="POST">{% csrf_token %}
-				<div class="card-body">
-
-					{% if form.errors %}
-						<div class="container">
-							<div class="alert alert-warning">
-								<strong>Atencion!</strong> Por favor revisa los campos.
-							</div>
-						</div>
-					{% endif %}
-
-					{{form.as_p}}
-					{% comment %}
-						
-                                        {% if request.user.is_authenticated and user.rol == "farmacia" %}
-                                        <p>{{form.rol.label_tag}}{{form.rol}}</p>
-                                        {% endif %}
-                                        <p>{{form.email.label_tag}}{{form.email}}</p>
-                                        <p>{{form.nombre.label_tag}}{{form.nombre}}</p>
-                                        <p>{{form.apellido.label_tag}}{{form.apellido}}</p>
-                                        <p>{{form.sexo.label_tag}}{{form.sexo}}</p>
-                                        <p>{{form.fecha_de_nacimiento.label_tag}}{{form.fecha_de_nacimiento}}</p>
-                                        <p>{{form.telefono.label_tag}}{{form.telefono}}</p>
-                                        <p>{{form.password1.label_tag}}{{form.password1}}</p>
-                                        <p>{{form.password2.label_tag}}{{form.password2}}</p>
-					{% endcomment %}
-
-					<h5><p>si deseas cambiar tu contraseña has click <a class="colora" href="{% url 'password_change' %}">aquí</a>.</p></h5>
-				</div>
-			        <div class="card-footer">
-				        <input class="btn btn-primary btn-lg btn-block" type="submit" value="Actualizar">
-			        </div>
-		        </form>
-	        </div>
+    {% if 'editado_correctamente' in request.GET and not form.errors %}
+    <div class="container">
+        <div class="alert alert-success">
+            <strong>Exito!</strong> Usuario editado correctamente.
         </div>
-	
+    </div>
+    {% endif %}
+
+    <div class="container">
+        <div class="form-group form-group col-md-12">
+            <div class="card-header">
+                <h3>Actulizar mi Usuario</h3>
+            </div>
+
+
+
+            <form method="POST">{% csrf_token %}
+                <div class="card-body">
+
+                    {% if form.errors %}
+                    <div class="container">
+                        <div class="alert alert-warning">
+                            <strong>Atencion!</strong> Por favor revisa los campos.
+                        </div>
+                    </div>
+                    {% endif %} {{form.as_p}} {% comment %} {% if request.user.is_authenticated and user.rol == "farmacia" %}
+                    <p>{{form.rol.label_tag}}{{form.rol}}</p>
+                    {% endif %}
+                    <p>{{form.email.label_tag}}{{form.email}}</p>
+                    <p>{{form.nombre.label_tag}}{{form.nombre}}</p>
+                    <p>{{form.apellido.label_tag}}{{form.apellido}}</p>
+                    <p>{{form.sexo.label_tag}}{{form.sexo}}</p>
+                    <p>{{form.fecha_de_nacimiento.label_tag}}{{form.fecha_de_nacimiento}}</p>
+                    <p>{{form.telefono.label_tag}}{{form.telefono}}</p>
+                    <p>{{form.password1.label_tag}}{{form.password1}}</p>
+                    <p>{{form.password2.label_tag}}{{form.password2}}</p>
+                    {% endcomment %}
+
+                    <h5>
+                        <p>si deseas cambiar tu contraseña has click <a class="colora" href="{% url 'password_change' %}">aquí</a>.</p>
+                    </h5>
+                </div>
+                <div class="card-footer">
+                    <input class="btn btn-primary btn-lg btn-block" type="submit" value="Actualizar">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
-
-
-	
