--- a/gestion_de_farmacias/plantillas/stock.html
+++ b/gestion_de_farmacias/plantillas/stock.html
@@ -34,47 +34,37 @@
                 </tr>
             </thead>
             <tbody>
-                {% for lote in lotes_list %}
-                {% if lote.stock < 50 %}
-                    <tr class="table-danger">
-                    {% else %}
-                    {% if lote.stock < 100 %}
-                    <tr class="table-warning">
-                    {% else %}
-                    <tr>
-                    {% endif %}
-                {% endif %}
-                    <td>{{lote.ingreso}}</td>
-                    <td>{{lote.ubicacion}}</td>
-                    <td>{{lote.stock}}</td>
-                    <td>
-                        {% if lote.stock < 50 %} 
-                            <span class="badge badge-danger">muy bajo</span>
-                        {% else %} 
-                            {% if lote.stock < 100 %} 
-                                <span class="badge badge-warning">bajo </span>
-                                {% else %} 
-                                    <span class="badge badge-success">ok</span>
-                            {% endif %} 
-                        {% endif %}
-                        </td>
-                    {% comment %}
-                    <td>
-                        {% if lote.stock
-                        < 50 %} <span class="badge badge-danger">¡muy bajo stock!</span>
-                            {% else %} {% if lote.stock
-                            < 100 %} <span class="badge badge-warning">¡bajo stock!</span>
-                                {% endif %} {% endif %}
-                    </td>
-                    {% endcomment %}
+                {% for lote in lotes_list %} {% if lote.stock < 50 %} <tr class="table-danger">
+                    {% else %} {% if lote.stock < 100 %} <tr class="table-warning">
+                        {% else %}
+                        <tr>
+                            {% endif %} {% endif %}
+                            <td>{{lote.ingreso}}</td>
+                            <td>{{lote.ubicacion}}</td>
+                            <td>{{lote.stock}}</td>
+                            <td>
+                                {% if lote.stock < 50 %} <span class="badge badge-danger">muy bajo</span>
+                                    {% else %} {% if lote.stock < 100 %} <span class="badge badge-warning">bajo </span>
+                                        {% else %}
+                                        <span class="badge badge-success">ok</span> {% endif %} {% endif %}
+                            </td>
+                            {% comment %}
+                            <td>
+                                {% if lote.stock
+                                < 50 %} <span class="badge badge-danger">¡muy bajo stock!</span>
+                                    {% else %} {% if lote.stock
+                                    < 100 %} <span class="badge badge-warning">¡bajo stock!</span>
+                                        {% endif %} {% endif %}
+                            </td>
+                            {% endcomment %}
 
-                    <td>{{lote.medicamento}}</td>
-                    <td>{{lote.funcionario}}</td>
-                    <td>{{lote.vencimiento}}</td>
-                    <td>{{lote.id}}</td>
-                    <td><a class="btn btn-sm btn-primary" href="/editar_stock/{{ lote.id }}">editar...</a></td>
-                </tr>
-                {% endfor %}
+                            <td>{{lote.medicamento}}</td>
+                            <td>{{lote.funcionario}}</td>
+                            <td>{{lote.vencimiento}}</td>
+                            <td>{{lote.id}}</td>
+                            <td><a class="btn btn-sm btn-primary" href="/editar_stock/{{ lote.id }}">editar...</a></td>
+                        </tr>
+                        {% endfor %}
             </tbody>
         </table>
         {% else %}
@@ -87,27 +77,28 @@
 
     <hr>
 
+    <div class="container">
+        <div id="formulario" class="form-group form-group col-md-12">
+            <div class="card-header">
+                <h3>Registrar stock</h3>
+            </div>
 
-    <div id="formulario" class="form-group form-group col-md-12">
-        <div class="card-header">
-            <h3>Registrar stock</h3>
-        </div>
-
-        <form method="POST">
-            {% csrf_token %}
-            <div class="card-body">
-                {% if formulario_nuevo_stock.errors %}
-                <div class="alert alert-danger" role="alert">
-                    <p class="">Por favor revisa los campos</p>
+            <form method="POST">
+                {% csrf_token %}
+                <div class="card-body">
+                    {% if formulario_nuevo_stock.errors %}
+                    <div class="alert alert-danger" role="alert">
+                        <p class="">Por favor revisa los campos</p>
+                    </div>
+                    {% endif %} 
+                    {{formulario_nuevo_stock.as_p}}
                 </div>
-                {% endif %} {{formulario_nuevo_stock.as_p}}
-            </div>
-            <div class="card-footer">
-                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Registrar" />
-            </div>
-        </form>
+                <div class="card-footer">
+                    <input class="btn btn-primary btn-lg btn-block" type="submit" value="Registrar" />
+                </div>
+            </form>
+        </div>
     </div>
-
 </div>
 
 
