Creacion de Farmacia General

--- a/gestion_de_farmacias/plantillas/lista_de_usuarios.html
+++ b/gestion_de_farmacias/plantillas/lista_de_usuarios.html
@@ -7,12 +7,12 @@
 <!--Nav bar-->
 {% include "nav.html" %}
 <div class="m-3">
-{% if user.rol == 'medico' %} 
-<h1>Mis Pacientes</h1>
-{%else%} 
+    {% if user.rol == 'medico' %}
+    <h1>Mis Pacientes</h1>
+    {%else%}
 
-<h1>Lista de Usuarios</h1>
-{%endif%}
+    <h1>Lista de Usuarios</h1>
+    {%endif%}
 
     <!-- ==============================-->
     <!-- Tabla con los Usuarios activos -->
@@ -35,6 +35,7 @@
                     <th>C.i.</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
+                    <th>Usuario</th>
                     <th>Rol</th>
                     <th>Ver</th>
                 </tr>
@@ -46,9 +47,11 @@
                     <td>{{ usuario.cedula_de_identidad }}</td>
                     <td>{{ usuario.nombre }}</td>
                     <td>{{ usuario.apellido }}</td>
+                    <td>{{ usuario.usuario }}</td>
                     <td>{{ usuario.rol }}</td>
                     <td>
-                        <a class="btn btn-outline-primary btn-block " href="/recetas_usuario/{{ usuario.cedula_de_identidad }}">Ver usuario</a></td>
+                        <a class="btn btn-sm btn-outline-primary" href="/recetas_usuario/{{ usuario.cedula_de_identidad }}">Ver usuario</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -58,7 +61,7 @@
     {% else %}
     <div class="alert alert-danger" role="alert">
         No hay usuarios registrados
-        </div>
+    </div>
     {% endif %}
     <br>
     <!-- Menú de paginación -->
