hice las correcciones para que no se genere stock negativo

--- a/gestion_de_farmacias/plantillas/inicio.html
+++ b/gestion_de_farmacias/plantillas/inicio.html
@@ -20,8 +20,8 @@
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
                     <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
-                    <li>Ver un listado de las <a class="text-primary" href="{% url 'mis_recetas' %}">recetas</a> propias.</li>
-                    <li><a class="text-primary" href="{% url 'mi_usuario' %}">Editar</a> sus datos personales o cambiar la contraseña. </li>
+                    <li>Ver un listado de las recetas propias.</li>
+                    <li>Editar sus datos personales o cambiar la contraseña. </li>
                 </ul>
             </ul>
         </div>
@@ -34,10 +34,10 @@
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
                     <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
-                    <li>Desde el sistema se podrá administrar el <a class="text-primary" href="{% url 'mi_stock' %}">stock</a> de la farmacia a la que el usuario pertenece.</li>
-                    <li>Consultar informacion de <a class="text-primary" href="{% url 'lista_de_usuarios' %}">usuarios.</a></li>
-                    <li>Ver trazabilidad de <a class="text-primary" href="{% url 'recetas' %}">recetas.</a></li>
-                    <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativos.</li>
+                    <li>Desde el sistema se podrá administrar el stock de la farmacia a la que el usuario pertenece.</li>
+                    <li>Consultar informacion de usuarios.</li>
+                    <li>Ver trazabilidad de recetas.</li>
+                    <li>Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativos.</li>
                 </ul>
             </ul>
         </div>
@@ -50,9 +50,9 @@
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
                     <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
-                    <li><a class="text-primary" href="/recetas/#crear_receta">Crear</a> recetas.</li>
-                    <li>Acceder a un listado de <a class="text-primary" href="{% url 'mis_pacientes' %}">pacientes</a> a los cuales ha otorgado recetas.</li>
-                    <li>Listado de <a class="text-primary" href="{% url 'recetas' %}">recetas.</a></li>
+                    <li>Crear recetas.</li>
+                    <li>Acceder a un listado de pacientes a los cuales ha otorgado recetas.</li>
+                    <li>Listado de recetas.</li>
 
                 </ul>
                 <ul>
@@ -66,8 +66,8 @@
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
                     <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
-                    <li>Consultar informacion de <a class="text-primary" href="{% url 'stock' %}">stock</a> nacional de medicamentos.</li>
-                    <li>Permite <a class="text-primary" href="/stock/#formulario">crear</a> ragistros de stock.</li>
+                    <li>Consultar informacion de stock nacional de medicamentos.</li>
+                    <li>Permite crear ragistros de stock en el deposito nacional.</li>
                 </ul>
             </ul>
         </div>
@@ -80,7 +80,7 @@
                 <ul>
                     <li>Consultar informacion de <a class="text-primary" href="{% url 'medicamentos' %}">medicamentos.</a></li>
                     <li>Consulta de <a class="text-primary" href="{% url 'farmacias' %}">farmacias.</a></li>
-                    <li>Consultar informacion de <a class="text-primary" href="{% url 'stock' %}">stock</a> nacional de medicamentos.</li>
+                    <li>Consultar informacion de stock nacional de medicamentos.</li>
                 </ul>
             </ul>
         </div>
@@ -91,7 +91,7 @@
             <ul>
                 <p>Únicamente él tiene acceso total a todo el sistema, puede realizar cambios en los roles de los funcionarios, ingresar nuevas farmacias, etc.</p>
                 <ul>
-                    <li>Consultar informacion de <a class="text-primary" href="{% url 'stock' %}">stock nacional de medicamentos.</a></li>
+                    <li>Consultar informacion de stock nacional de medicamentos.</li>
                     <li> Permite realizar consultas sobre vencimientos, cantidades, ubicación, despacho, medicamentos alternativos.</li>
                 </ul>
             </ul>
