--- a/gestion_de_farmacias/plantillas/medicamentos.html
+++ b/gestion_de_farmacias/plantillas/medicamentos.html
@@ -7,6 +7,14 @@
 <!--Nav bar-->
 {% include "nav.html" %}
 
+<style>
+    body {
+     
+      background-color: #B6CDB4;
+    }
+   
+    </style>
+
 <div class="m-3">
     <h3>Medicamentos</h3>
 
