--- a/gestion_de_farmacias/plantillas/mi_stock.html
+++ b/gestion_de_farmacias/plantillas/mi_stock.html
@@ -6,6 +6,13 @@
 
 <!--Nav bar-->
 {% include "nav.html" %}
+
+<style>
+    body {
+     
+      background-color: #B6CDB4;
+    }
+</style>
 <div class="m-3 mt-5">
 
     {% if 'sin_stock' in request.GET  and not form.non_field_errors %}
