--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -1,7 +1,7 @@
 {% comment "" %}
 <!-- menu responsive -->{% endcomment %}
 
-<nav class=" classcolor navbar navbar-expand-lg navbar-toggler   navbar-dark bg-dark ">
+<nav class=" classcolor navbar navbar-expand-lg navbar-toggler ">
     <!-- Logo -->
 
     <a class="navbar-brand " href="/inicio/">
@@ -21,7 +21,7 @@
         <!-- Links -->
         <ul class="navbar-nav ">
 
-            <li class="nav-item h6 text-center">
+            <li class="nav-item h6 text-center ">
                 <a class="nav-link text-light" href="/inicio/">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi mx-auto mb-1e d-none d-lg-block" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
