--- a/gestion_de_farmacias/plantillas/recetas_usuario.html
+++ b/gestion_de_farmacias/plantillas/recetas_usuario.html
@@ -57,7 +57,7 @@
                     <th>Principio activo </th>
                     <th>Paciente </th>
                     <th>Medico </th>
-                    <th>Descripcion </th>
+                    <th>Descripción </th>
                     <th>Vencimiento </th>
                     {% if user.rol == "farmacia" %}
                     <th>Gestionar</th>
