--- a/gestion_de_farmacias/plantillas/farmacias.html
+++ b/gestion_de_farmacias/plantillas/farmacias.html
@@ -7,6 +7,13 @@
 <!--Nav bar-->
 {% include "nav.html" %}
 
+<style>
+    body {
+     
+      background-color: #B6CDB4;
+    }
+   
+    </style>
 <div class="m-3">
     <h3>Farmacias</h3>
 
