--- a/gestion_de_farmacias/plantillas/stock.html
+++ b/gestion_de_farmacias/plantillas/stock.html
@@ -6,6 +6,14 @@
 <!--Nav bar-->
 {% include "nav.html" %}
 
+<style>
+    body {
+     
+      background-color: #B6CDB4;
+    }
+   
+    </style>
+
 <div class="m-3 mt-5">
 
     <div>
