integre las modificaciones que hizo andres

--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -1,7 +1,7 @@
 {% comment "" %}
 <!-- menu responsive -->{% endcomment %}
 
-<nav class=" classcolor navbar navbar-expand-lg navbar-toggler   navbar-dark bg-dark ">
+<nav class=" classcolor navbar navbar-expand-lg navbar-toggler">
     <!-- Logo -->
 
     <a class="navbar-brand " href="/inicio/">
@@ -11,8 +11,10 @@
             -->
     </a>
 
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglercolapse" aria-controls="navbarTogglercolapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button style="" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglercolapse" aria-controls="navbarTogglercolapse" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="text-light  fa fa-bars btn-lgg" aria-hidden="true"></i>
+
+
     </button>
 
 
