--- a/gestion_de_farmacias/plantillas/base.html
+++ b/gestion_de_farmacias/plantillas/base.html
@@ -17,7 +17,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -30,13 +29,26 @@
     <!--<script type="text/javascript" src="https://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>-->
     <!--traduccion de la libreria al español-->
     <script src="{% static 'jquery.dataTables.min.js' %}"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'estilos.css' %}" />
+    
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
+    <style>
+        body {
+            /* original 
+            background-color: #B6CDB4;
+            
+            aclarado
+            background-color: #d3dfd2;
+            */
+            background-color: #e9f3e7;
+        }
+    </style>
 
 </head>
 
-<bodyp>
+<body>
     <!--Nav bar-->
     {% comment "" %} {% include "nav.html" %} {% endcomment %}
 
